--- a/contact_form/css/main.css
+++ b/contact_form/css/main.css
@@ -7,27 +7,27 @@
 
 @font-face {
   font-family: Poppins-Regular;
-  src: url('../fonts/poppins/Poppins-Regular.ttf'); 
+  src: url('../fonts/poppins/Poppins-Regular.ttf');
 }
 
 @font-face {
   font-family: Poppins-Medium;
-  src: url('../fonts/poppins/Poppins-Medium.ttf'); 
+  src: url('../fonts/poppins/Poppins-Medium.ttf');
 }
 
 @font-face {
   font-family: Poppins-Bold;
-  src: url('../fonts/poppins/Poppins-Bold.ttf'); 
+  src: url('../fonts/poppins/Poppins-Bold.ttf');
 }
 
 @font-face {
   font-family: Poppins-SemiBold;
-  src: url('../fonts/poppins/Poppins-SemiBold.ttf'); 
+  src: url('../fonts/poppins/Poppins-SemiBold.ttf');
 }
 
 @font-face {
   font-family: Montserrat-Bold;
-  src: url('../fonts/montserrat/Montserrat-Bold.ttf'); 
+  src: url('../fonts/montserrat/Montserrat-Bold.ttf');
 }
 
 
@@ -35,12 +35,13 @@
 [ RESTYLE TAG ]*/
 
 * {
-	margin: 0px; 
-	padding: 0px; 
+	margin: 0px;
+	padding: 0px;
 	box-sizing: border-box;
 }
 
 body, html {
+  background-color: #000000;
 	height: 100%;
 	font-family: Poppins-Regular, sans-serif;
 }
@@ -158,7 +159,7 @@ iframe {
   font-family: Poppins-Regular;
   font-size: 15px;
   line-height: 1.6;
-  color: #00ad5f;
+  color: #9f785f;
 }
 
 /*==================================================================
@@ -177,7 +178,7 @@ iframe {
 [ Contact ]*/
 
 .container-contact100 {
-  width: 100%;  
+  width: 100%;
   min-height: 100vh;
   display: -webkit-box;
   display: -webkit-flex;
@@ -189,7 +190,7 @@ iframe {
   align-items: center;
   padding: 15px;
   background: #f2f2f2;
-  
+
 }
 
 .wrap-contact100 {
@@ -212,10 +213,7 @@ iframe {
 .contact100-more {
   width: 50%;
   background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
   position: relative;
-  z-index: 1;
   padding: 30px 15px 0px 15px;
 }
 
@@ -285,7 +283,7 @@ iframe {
   line-height: 1.5;
   text-transform: uppercase;
   letter-spacing: 1px;
-  
+
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -295,7 +293,7 @@ iframe {
   width: 100%;
   min-height: 55px;
   border: 1px solid #e6e6e6;
-  border-bottom: none; 
+  border-bottom: none;
   padding: 10px 25px;
   margin-top: 15px;
   margin-bottom: 0;
@@ -333,7 +331,7 @@ textarea.input100 {
   top: -1px;
   left: -1px;
   pointer-events: none;
-  border: 1px solid #00ad5f;
+  border: 1px solid #9f785f;
 
   visibility: hidden;
   opacity: 0;
@@ -389,7 +387,7 @@ textarea.input100 {
   min-width: 200px;
   height: 50px;
   border-radius: 2px;
-  background: #00ad5f;
+  background: #9f785f;
 
   font-family: Montserrat-Bold;
   font-size: 12px;
@@ -517,6 +515,3 @@ textarea.input100 {
     opacity: 1;
   }
 }
-
-
-
